[package]
name = "pipe_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.68"
bincode = "2.0.0-rc.3"
home = "0.5.5"
nix = {version = "0.26.2", features = ["fs"]}
prost = "0.11.9"
tempfile = "3.6.0"
tokio = {version = "1.28.2", features =["full"]}
tun = "0.5.5"

[build-dependencies]
prost-build = "0.11.9"
